productions/veadk/archives/1.0.5/zh/components/tools/video-generate.mdx
---
title: "视频生成"
en_link: "/productions/veadk/archives/1.0.5/en/components/tools/video-generate"
---

## 功能说明

对应工具标识 `video_generate`。

`video_generate` 根据文本描述生成视频。下面的示例先用 `image_generate` 生成首帧与尾帧，再合成视频。

导入路径：`from veadk.tools.builtin_tools.video_generate import video_generate`

## 环境变量与前提

<Warning>
附加要求：

1. 配置用于智能体推理模型的 API Key；
2. 配置用于视频生成的模型名称（`MODEL_VIDEO_NAME`）；
3. 若使用首尾帧合成，还需配置图像生成模型名称（`MODEL_IMAGE_NAME`）。
</Warning>

环境变量：

- `MODEL_AGENT_API_KEY`：智能体推理模型的 API Key
- `MODEL_VIDEO_NAME`：视频生成模型名称
- `MODEL_IMAGE_NAME`：图像生成模型名称

`config.yaml` 配置项：

```yaml title="config.yaml" lines
model:
  video:
    name: doubao-seedance-2-0-260128
    api_base: https://ark.cn-beijing.volces.com/api/v3/
    api_key: your-api-key-here
```

## 使用方法

```python title="examples/tools/video_generate/agent.py" lines
import asyncio

from veadk import Agent, Runner
from veadk.memory.short_term_memory import ShortTermMemory
from veadk.tools.builtin_tools.image_generate import image_generate
from veadk.tools.builtin_tools.video_generate import video_generate

agent = Agent(
    name="video_generate_agent",
    model_name="doubao-seed-2-1-pro-260628",
    description="An expert in creating images and videos.",
    instruction=(
        "先用 image_generate 生成首帧和尾帧，再用 video_generate 合成视频，"
        "最后返回视频的绝对路径并简述视频内容。"
    ),
    tools=[image_generate, video_generate],
)

runner = Runner(agent=agent, short_term_memory=ShortTermMemory())


async def main():
    response = await runner.run("生成一只小狗，再生成它飞上天空的画面，最终合成一个视频")
    print(response)


if __name__ == "__main__":
    asyncio.run(main())
```
